syntax = "proto3";

package api.riot;

import "google/protobuf/any.proto";

option go_package = "edu/api/riot;riot";
option java_multiple_files = true;
option java_package = "api.riot";

message ApiReply {
    int32 code = 1;
    string reason = 2;
    string message = 3;
    int32 ttl = 4;
    int32 pageIndex = 5;
    int32 pageSize = 6;
    int32 count = 7; // total
    repeated google.protobuf.Any data = 8;
}
